--- a/CoreTweetSupplement.nuspec
+++ b/CoreTweetSupplement.nuspec
@@ -12,7 +12,7 @@
         <copyright>(c) 2014 azyobuzin</copyright>
         <tags>Twitter</tags>
         <dependencies>
-            <dependency id="CoreTweet" version="(, 0.3.2]" />
+            <dependency id="CoreTweet" version="0.3.3" />
             <dependency id="Newtonsoft.Json" version="4.5.11" />
         </dependencies>
     </metadata>
