--- a/CoreTweetSupplement.nuspec
+++ b/CoreTweetSupplement.nuspec
@@ -17,6 +17,6 @@
     </metadata>
     <files>
         <file src="CoreTweetSupplement\bin\Release\CoreTweetSupplement.dll" target="lib\portable-net4+sl5+wp8+win8+wpa81+MonoAndroid+MonoTouch\CoreTweetSupplement.dll" />
-        <file src="CoreTweetSupplement\bin\Release\CoreTweetSupplement.XML" target="lib\portable-net4+sl5+wp8+win8+wpa81+MonoAndroid+MonoTouch\CoreTweetSupplement.XML" />
+        <file src="CoreTweetSupplement\bin\Release\CoreTweetSupplement.xml" target="lib\portable-net4+sl5+wp8+win8+wpa81+MonoAndroid+MonoTouch\CoreTweetSupplement.xml" />
     </files>
 </package>
