--- a/CoreTweetSupplement/CoreTweetSupplement.nuspec
+++ b/CoreTweetSupplement/CoreTweetSupplement.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>CoreTweetSupplement</id>
-        <version>1.1</version>
+        <version>$version$</version>
         <title>CoreTweetSupplement</title>
         <authors>azyobuzin</authors>
         <licenseUrl>https://github.com/azyobuzin/CoreTweetSupplement/blob/master/LICENSE.txt</licenseUrl>
@@ -12,13 +12,13 @@
         <copyright>(c) 2014 azyobuzin</copyright>
         <tags>Twitter</tags>
         <dependencies>
-            <dependency id="CoreTweet" version="0.3.4" />
+            <dependency id="CoreTweet" version="0.4.1" />
         </dependencies>
     </metadata>
     <files>
-        <file src="CoreTweetSupplement\bin\Release\CoreTweetSupplement.dll" target="lib\net40\CoreTweetSupplement.dll" />
-        <file src="CoreTweetSupplement\bin\Release\CoreTweetSupplement.xml" target="lib\net40\CoreTweetSupplement.xml" />
-        <file src="CoreTweetSupplement.Pcl\bin\Release\CoreTweetSupplement.dll" target="lib\portable-net4+sl5+wp8+win8+wpa81+MonoAndroid+MonoTouch\CoreTweetSupplement.dll" />
-        <file src="CoreTweetSupplement.Pcl\bin\Release\CoreTweetSupplement.xml" target="lib\portable-net4+sl5+wp8+win8+wpa81+MonoAndroid+MonoTouch\CoreTweetSupplement.xml" />
+        <file src="bin\Release\CoreTweetSupplement.dll" target="lib\net40\CoreTweetSupplement.dll" />
+        <file src="bin\Release\CoreTweetSupplement.xml" target="lib\net40\CoreTweetSupplement.xml" />
+        <file src="..\CoreTweetSupplement.Pcl\bin\Release\CoreTweetSupplement.dll" target="lib\portable-net4+wp8+win81+wpa81+MonoAndroid+MonoTouch\CoreTweetSupplement.dll" />
+        <file src="..\CoreTweetSupplement.Pcl\bin\Release\CoreTweetSupplement.xml" target="lib\portable-net4+wp8+win81+wpa81+MonoAndroid+MonoTouch\CoreTweetSupplement.xml" />
     </files>
 </package>
