--- a/CoreTweetSupplement.Pcl/packages.config
+++ b/CoreTweetSupplement.Pcl/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CoreTweet" version="0.4.3.110" targetFramework="portable-net4+sl5+wp8+win8+wpa81+MonoAndroid+MonoTouch+Xamarin.iOS" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="portable-net40+sl4+wp7+win8" />
+  <package id="CoreTweet" version="0.5.3" targetFramework="portable4-net4+sl5+win8+wp8+wpa81" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable4-net4+sl5+win8+wp8+wpa81" />
 </packages>
