--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,21 +1,13 @@
-version: 1.6.0.{build}
+version: 1.6.1.{build}
 
 os: Visual Studio 2015
 
-build:
-  project: CoreTweetSupplement.sln
-  parallel: true
-  publish_nuget: true
+build_script:
+- ps: dotnet restore
+- ps: dotnet pack -c Release --version-suffix "ci$(Get-Date -Format yyyyMMddHHmm)" src\CoreTweetSupplement
 
-configuration: Release
+test_script:
+- ps: dotnet test test\CoreTweetSupplement.Tests
 
-nuget:
-  account_feed: true
-  project_feed: true
-  disable_publish_on_pr: true
-
-assembly_info:
-  patch: true
-  file: "CoreTweetSupplement\\Properties\\AssemblyInfo.cs"
-  assembly_version: '{version}'
-  assembly_file_version: '{version}'
+artifacts:
+- path: src\CoreTweetSupplement\bin\Release\*.nupkg
